.debug/learn-python/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-learn-python
  labels:
    helm.sh/chart: learn-python-0.1.0
    app.kubernetes.io/name: learn-python
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/part-of: "learn-python"
    app.kubernetes.io/version: "v0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: learn-python
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      annotations:
        custom-annotation: custom-value
      labels:
        helm.sh/chart: learn-python-0.1.0
        app.kubernetes.io/name: learn-python
        app.kubernetes.io/instance: RELEASE-NAME
        app.kubernetes.io/part-of: "learn-python"
        app.kubernetes.io/version: "v0.1.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: RELEASE-NAME-learn-python
      securityContext:
        fsGroup: 65534
      containers:
        - name: learn-python
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/dxas90/learn-python:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: 8000
          resources:
            limits:
              cpu: 1m
              memory: 56Mi
            requests:
              cpu: 1m
              memory: 56Mi
          volumeMounts:
            - mountPath: /var/cache/app
              name: app-cache
      volumes:
        - emptyDir: {}
          name: app-cache
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
