.debug/learn-python/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: RELEASE-NAME-learn-python
  labels:
    helm.sh/chart: learn-python-0.1.0
    app.kubernetes.io/name: learn-python
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/part-of: "learn-python"
    app.kubernetes.io/version: "v0.1.0"
    app.kubernetes.io/managed-by: Helm
    x-use-cloudflare-solver: "true"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/target: enter.example.com
    networking.x-k8s.io/route-shard: example
spec:
  parentRefs:
  - name: external
    namespace: kube-system
    sectionName: https
  hostnames:
    - "example.local"
  rules:
    -
      matches:
        -
          path:
            type: PathPrefix
            value: /
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: secured-chain
          type: ExtensionRef
      backendRefs:
        - name: RELEASE-NAME-learn-python
          port: 8000
